[doc] Prevent overflow in schema tables

--- a/doc/css/mc_rtc.css
+++ b/doc/css/mc_rtc.css
@@ -135,9 +135,14 @@ body
   margin-bottom: 10px;
 }
 
-.card .card-schema table
+.card-body table
 {
   table-layout:fixed;
+}
+
+.card-body .btn
+{
+  word-break: break-word;
 }
 
 .object-property
